@@ -14,6 +14,7 @@ lcs-web (2.4.8~3) UNRELEASED; urgency=low
   * Fix make replica config in mkSlapdConf.sh for Etch or Lenny...
   * Fix typo in user_lcs.inc.php
   * Add change-ip.sh script in /usr/share/lcs/scripts
+  * Delete Roundcube sessio cookie in functions.inc.php
 
   [ Raphaël Hertzog ]
   * Remove /tmp/{applilcs,moduleslcs}.xml before calling wget otherwise wget
@@ -34,7 +35,7 @@ lcs-web (2.4.8~3) UNRELEASED; urgency=low
   [ Cyril Bouthors ]
   * Added support for hooks in /usr/share/lcs/lcs-web-hooks.d
 
- -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 10 Dec 2010 08:46:54 +0100
+ -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 10 Dec 2010 10:39:15 +0100
 
 lcs-web (2.4.7) Lcs; urgency=low
 
